# nvoc

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
src/: cli.rs  constants.rs  main.rs
src/gpu/: domain.rs  info.rs  mod.rs  overclock.rs  power.rs  reset.rs  validation.rs
src/gpu/domain/: mod.rs  power.rs
src/nvml/: error.rs  loader.rs  mod.rs  types.rs
