[package]
name = "nvoc"
version = "0.1.0"
edition = "2021"
description = "NVIDIA GPU overclocking utility for Blackwell (RTX 50-series) on Linux"
license = "MIT"
keywords = ["nvidia", "gpu", "overclocking", "nvml", "blackwell"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "nvoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
libloading = "0.8"
